--- a/studentwater2/css/landing.css
+++ b/studentwater2/css/landing.css
@@ -11,6 +11,16 @@
     text-shadow:1px 1px 1px  #7B7A7A !important; 
 }
 
+.smallTitleFont {
+    text-align: center !important;
+    font-weight: bold;
+    font-family: "Lato",sans-serif;
+    font-size: 3em;
+    clear: both !important;
+    color: #0E8BF6;
+    text-shadow: 1px 1px 1px #7B7A7A !important;
+}
+
 .pantext{
 
     font-weight:bold;
